--- a/templates/base/package.json
+++ b/templates/base/package.json
@@ -1,17 +1,24 @@
 {
   "name": "base",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Contains the base files for every template",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.11.1",
-  "dependencies": {
-    "date-fns": "^4.1.0",
-    "graphql-request": "^7.3.1"
+  "devDependencies": {
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.6"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix"
+    ]
   }
 }
