--- a/templates/ssr-fs-graphql/package.json
+++ b/templates/ssr-fs-graphql/package.json
@@ -26,8 +26,6 @@
     "@react-router/node": "^7.9.4",
     "@react-router/serve": "^7.9.4",
     "@tanstack/react-query": "^5.90.5",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "graphql": "^16.11.0",
     "graphql-request": "^7.3.1",
     "isbot": "^5.1.31",
@@ -35,8 +33,7 @@
     "nuqs": "^2.7.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router": "^7.9.4",
-    "tailwind-merge": "^3.3.1"
+    "react-router": "^7.9.4"
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.15.0",
@@ -46,19 +43,15 @@
     "@graphql-codegen/client-preset": "^5.1.0",
     "@graphql-codegen/schema-ast": "^5.0.0",
     "@react-router/dev": "^7.9.4",
-    "@tailwindcss/vite": "^4.1.16",
     "@tanstack/eslint-plugin-query": "^5.91.2",
     "@types/node": "^24.9.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "eslint": "^9.38.0",
-    "eslint-plugin-better-tailwindcss": "^3.7.10",
     "eslint-plugin-format": "^1.0.2",
     "eslint-plugin-react-hooks": "^7.0.0",
     "eslint-plugin-react-refresh": "^0.4.24",
     "react-router-devtools": "^5.1.3",
-    "tailwindcss": "^4.1.16",
-    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "vite": "^7.1.12",
     "vite-tsconfig-paths": "^5.1.4"
