--- a/templates/features/routing/rr-fs-graphql-rq/package.json
+++ b/templates/features/routing/rr-fs-graphql-rq/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-router-fs",
+  "name": "rr-fs-graphql-rq",
   "type": "module",
   "version": "0.0.1",
   "packageManager": "pnpm@10.11.1",
@@ -33,15 +33,17 @@
     "nuqs": "^2.7.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router": "^7.9.4"
+    "react-router": "^7.9.4",
+    "vite-plugin-babel": "^1.3.2"
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.15.0",
-    "@antfu/eslint-config": "^6.0.0",
+    "@antfu/eslint-config": "^6.1.0",
     "@eslint-react/eslint-plugin": "^2.2.3",
     "@graphql-codegen/cli": "^6.0.1",
     "@graphql-codegen/client-preset": "^5.1.0",
     "@graphql-codegen/schema-ast": "^5.0.0",
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@react-router/dev": "^7.9.4",
     "@tanstack/eslint-plugin-query": "^5.91.2",
     "@types/node": "^24.9.1",
@@ -49,7 +51,7 @@
     "@types/react-dom": "^19.2.2",
     "eslint": "^9.38.0",
     "eslint-plugin-format": "^1.0.2",
-    "eslint-plugin-react-hooks": "^7.0.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "react-router-devtools": "^5.1.3",
     "typescript": "^5.9.3",
