--- a/templates/features/routing/rr-fs-graphql-rq/package.json
+++ b/templates/features/routing/rr-fs-graphql-rq/package.json
@@ -49,6 +49,7 @@
     "@types/node": "^24.9.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "babel-plugin-react-compiler": "^19.1.0-rc.3",
     "eslint": "^9.38.0",
     "eslint-plugin-format": "^1.0.2",
     "eslint-plugin-react-hooks": "^7.0.1",
