--- a/package.json
+++ b/package.json
@@ -43,17 +43,17 @@
   ],
   "author": "ringuralte",
   "license": "ISC",
-  "packageManager": "pnpm@10.11.1",
+  "packageManager": "pnpm@10.20.0",
   "dependencies": {
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
-    "inquirer": "^12.2.0",
-    "ora": "^8.1.1",
+    "execa": "^9.5.2",
     "fs-extra": "^11.2.0",
-    "execa": "^9.5.2"
+    "inquirer": "^12.2.0",
+    "ora": "^8.1.1"
   },
   "devDependencies": {
-    "@types/node": "^24.9.1",
-    "@types/fs-extra": "^11.0.4"
+    "@types/fs-extra": "^11.0.4",
+    "@types/node": "^24.9.1"
   }
 }
