--- a/templates/features/routing/rr-graphql-rq/package.json
+++ b/templates/features/routing/rr-graphql-rq/package.json
@@ -18,8 +18,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "eslint . --fix",
-    "codegen": "graphql-codegen --config codegen.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
     "@react-router/node": "^7.9.4",
