--- a/templates/features/ui/shadcn-tailwind/package.json
+++ b/templates/features/ui/shadcn-tailwind/package.json
@@ -7,8 +7,7 @@
     "typecheck": "react-router typegen && tsc",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "eslint . --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
