--- a/templates/features/routing/basic-spa/package.json
+++ b/templates/features/routing/basic-spa/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
     "babel-plugin-react-compiler": "^19.1.0-rc.3",
+    "dotenv": "^17.2.3",
     "eslint": "^9.38.0",
     "eslint-plugin-format": "^1.0.2",
     "eslint-plugin-react-hooks": "^7.0.1",
